Adjust dialog to remain at same vertical position throughout edits, and avoid jumping up and down as form validation pops up. Add Regex validation. Add #initializeInputError function to handle the 3 input errors. Change input handling to strip the last character of invalid strings, preventing its input, unless it is a number.

--- a/style.css
+++ b/style.css
@@ -120,6 +120,10 @@ dialog {
   border: none;
   background-color: var(--color-light);
   border-radius: 0.4em;
+  margin: 0;
+  transform: translateX(-50%);
+  left: 50%;
+  top: 20%;
 }
 
 fieldset {
